# asia-jobs-scraper

./: .gitignore  README.md  application.py  config.py  config.toml  crawlers.py  models.py  pyproject.toml  selenium_intro.py
crawlers/: crawler.py  strategy.py
crawlers/strategies/: careerviet.py  saramin.py  selenium_strategy.py
persistence/: __init__.py  sqlite.py
scrapers/: __init__.py  scraper.py  strategy.py
scrapers/job_details/: __init__.py  careerviet.py  saramin.py
scrapers/job_links/: __init__.py  saramin.py  strategy.py
scrapers/job_links/strategies/: careerviet.py  saramin.py  selenium_strategy.py
scrapers/link_sraping/: __init__.py  saramin.py
scrapers/strategies/: __init__.py  careerviet.py  saramin.py
