[tool.poetry]
name = "asia-jobs-scraper"
version = "0.1.0"
description = ""
authors = ["Grigori Zaika <h.zaika@student.uw.edu.pl>"]
readme = "README.md"
packages = [{include = "application.py", from = "."}]

[tool.poetry.scripts]
scrape = 'application:run'

[tool.poetry.dependencies]
python = "^3.13"
selenium = "^4.28.1"
bs4 = "^0.0.2"
configparser = "^7.1.0"
pydantic = "^2.10.6"
fire = "^0.7.0"
mypy = "^1.15.0"
tomli = "^2.2.1"
black = "^25.1.0"
requests = "^2.32.3"
rich = "^13.9.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.mypy.overrides]]
module = "fire.*"
ignore_missing_imports = true
